--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "watch": "tsc --watch",
     "clean": "rm -rf ./docs",
-    "start": "parcel serve dashboard.html --dist-dir docs",
-    "build": "npm run clean && pracel dashboard.html --dist-dir docs"
+    "start": "parcel serve dashboard.html sign-in.html sign-up.html --dist-dir docs",
+    "build": "npm run clean && pracel dashboard.html sign-in.html sign-up.html --dist-dir docs"
   },
   "keywords": [],
   "author": "Rushain Sovis",
