--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Rushain Sovis",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.7",
     "parcel": "^2.0.0"
   }
 }
